5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1834_2604.log
== TEST (2019-07-01 12:48:25) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:48:38) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:48:54) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
print(a[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:49:28) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
print(round(a[0],1))
print(round(a[1],1))
print(round(a[2],1))
print(round(a[3],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:49:39) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
print(round(a[0],1))
print(round(a[1],1))
print(round(a[2],1))
print(round(a[3],1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 12:49:44) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
print(round(a[0],1))
print(round(a[1],1))
print(round(a[2],1))
print(round(a[3],1))
-- EXECUTION TIME:
1.02331
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 13, in <module>
    print(round(a[3],1))
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:49:55) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
print(round(a[0],2))
print(round(a[1],2))
print(round(a[2],2))
print(round(a[3],2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:50:38) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:53:07) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(a):
	a[i]=round(a[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:53:13) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(a):
	a[i]=round(a[i])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:53:20) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(a):
	a[i]=round(a[i],1)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:53:33) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	a[i]=round(a[i],1)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:53:57) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	q[i]=round(a[i],1)
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:54:15) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	q=round(a[i],1)
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:54:52) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=round(max(x[i,:]),1)
for i in range(x.shape[0]):
	q=round(a[i],1)
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:54:59) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=round(max(x[i,:]),1)

print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:55:05) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=round(max(x[i,:]),1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:55:24) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=round(max(x[i,:],1))

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:56:05) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])

print(round(a),1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:56:15) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])

print(round(a),1)0
-- ERROR:
File "XXXX", line 11
    print(round(a),1)0
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:56:34) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])

print(round(a,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:57:32) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(7):
	a[i]=round(a[i],1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:57:50) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	a[i]=round(a[i],1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:58:01) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	a[i]=round(a[i],2)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:58:23) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)


for i in range(x.shape[0]):
	a[i]=round(a[i],1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:58:28) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)


for i in range(x.shape[0]):
	a[i]=round(a[i],1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:58:49) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	a[i]=round(a,1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:59:07) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	a[i]=round(x[i],1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:59:16) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	x[i]=round(x[i],1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:59:24) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	x[i]=round(a[i],1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:59:30) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	x[i]=round(a[i],1)

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 12:59:57) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	a[l]=round(a[i],1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:00:05) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	a[j]=round(a[i],1)

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:03:23) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])
for i in range(x.shape[0]):
	if a[i]==max(a):
		if i+1==1;
			print(max(a[0]))


-- ERROR:
File "XXXX", line 12
    if i+1==1;
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 21:53:11) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])


print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:53:16) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))

a=zeros(x.shape[0], dtype=int)

for i in range(x.shape[0]):
	a[i]=max(x[i,:])


print(a)
-- EXECUTION TIME:
1.19858
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
[89 99 93]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:54:16) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))



for i in range(x.shape[0]):
	a[i]=max(x[i,:])


print(a)
-- EXECUTION TIME:
1.77409
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 9, in <module>
    a[i]=max(x[i,:])
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:54:17) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))



for i in range(x.shape[0]):
	a[i]=max(x[i,:])


print(a)
-- EXECUTION TIME:
2.66475
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 9, in <module>
    a[i]=max(x[i,:])
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:54:17) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))



for i in range(x.shape[0]):
	a[i]=max(x[i,:])


print(a)
-- EXECUTION TIME:
2.10773
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1834/2604/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:54:24) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))



for i in range(x.shape[0]):
	a[i]=max(x[i,:])


print(a)
-- EXECUTION TIME:
0.75186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 9, in <module>
    a[i]=max(x[i,:])
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:54:41) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))



for i in range(x.shape[0]):
	a=max(x[i,:])


print(a)
-- EXECUTION TIME:
1.06928
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
93.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:54:43) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))



for i in range(x.shape[0]):
	a=max(x[i,:])


print(a)
-- EXECUTION TIME:
1.21812
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
93.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 21:55:09) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))



for i in range(x.shape[0]):
	print(max(x[i,:]))



-- EXECUTION TIME:
1.13647
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:02:17) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))



for i in range(x.shape[0]):
	print(max(x[i,:]))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:07:26) 
-- CODE:
from numpy.linalg import*
from numpy import*

x=array(eval(input("")))
for i in range(x.shape[0]):
	print(max(x[i,:]))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
